<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.ChangeUsernameFragment">


    <EditText
        android:id="@+id/settings_input_username"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_input_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_change_username_choose_text"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:maxLines="1"
        android:padding="@dimen/appPadding"
        android:text="@string/settings_default_change_username_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_input_username" />

    <TextView
        android:padding="@dimen/appPadding"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:text="@string/settings_default_advanced"
        app:layout_constraintTop_toBottomOf="@id/settings_change_username_choose_text" />
</androidx.constraintlayout.widget.ConstraintLayout>